--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,11 @@ body {
   padding: 0;
 }
 
+.main-content {
+  justify-items: center;
+  align-content: center;
+}
+
 .h1-class {
   font-size: 2rem;
   color: grey;
@@ -48,4 +53,35 @@ body {
   background-color: rgb(220, 220, 220);
   justify-items: center;
   color: grey;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  width: 100vw;
+  height: 100%;
+  text-align: center;
+  padding: 20px;
+  font-family: Tahoma;
+  font-size: 2rem;
+}
+
+.upper-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.lower-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+hr {
+  background-color: grey;
+  width: 100%;
 }
