--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,87 +1,14 @@
+@import "tailwindcss";
+
 html,
 body {
   margin: 0;
   padding: 0;
-}
-
-.main-content {
-  justify-items: center;
-  align-content: center;
-}
-
-.h1-class {
-  font-size: 2rem;
-  color: grey;
-  margin-left: 10px;
-  margin-right: 30px;
-  font-family: "Exo 2", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.navbar {
-  height: 60px;
-  width: 100%;
-  background-color: rgb(220, 220, 220);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.btn {
-  background-color: rgb(220, 220, 220);
-  color: grey;
-  border-radius: 0px;
-  border-color: rgb(220, 220, 220);
-  box-shadow: none;
-  border: none;
-  margin: 10px;
-}
-
-.btn:hover {
-  color: black;
-}
-
-.btn:active {
-  color: black;
-}
-
-.footer {
-  height: 50px;
-  width: 100%;
-  background-color: rgb(220, 220, 220);
-  justify-items: center;
-  color: grey;
-}
-
-.card-container {
-  display: flex;
-  flex-direction: column;
-}
-
-.card {
-  width: 100vw;
   height: 100%;
-  text-align: center;
-  padding: 20px;
-  font-family: Tahoma;
-  font-size: 2rem;
 }
 
-.upper-card {
+#root {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-}
-
-.lower-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-hr {
-  background-color: grey;
-  width: 100%;
 }
